[package]
name = "challenge"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
solana-sdk = "1.18"
solana-client = "1.18"
dotenv = "0.15"
spl-token = "4.0.0"
base64 = "0.21"
ed25519-dalek = "1.0.1"
